@@ -2,15 +2,18 @@
 package org.hiero.otter.fixtures.container;
 
 import static org.hiero.otter.fixtures.container.ContainerNetwork.NODE_IDENTIFIER_FORMAT;
+import static org.hiero.otter.fixtures.container.utils.ContainerConstants.CONTAINER_APP_WORKING_DIR;
+import static org.hiero.otter.fixtures.container.utils.ContainerConstants.CONTAINER_CONTROL_PORT;
+import static org.hiero.otter.fixtures.container.utils.ContainerConstants.NODE_COMMUNICATION_PORT;
+import static org.hiero.otter.fixtures.container.utils.ContainerConstants.getContainerControlDebugPort;
+import static org.hiero.otter.fixtures.container.utils.ContainerConstants.getJavaToolOptions;
+import static org.hiero.otter.fixtures.container.utils.ContainerConstants.getNodeCommunicationDebugPort;
 
 import com.hedera.hapi.platform.state.NodeId;
 import edu.umd.cs.findbugs.annotations.NonNull;
-import java.io.IOException;
-import java.io.UncheckedIOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
 import org.testcontainers.containers.GenericContainer;
 import org.testcontainers.containers.Network;
+import org.testcontainers.containers.wait.strategy.Wait;
 import org.testcontainers.images.builder.ImageFromDockerfile;
 
 /**
@@ -18,8 +21,6 @@ import org.testcontainers.images.builder.ImageFromDockerfile;
  * containers. It connects the container to the provided Docker {@link Network}.
  */
 public class ContainerImage extends GenericContainer<ContainerImage> {
-    public static final int CONTROL_PORT = 8080;
-    private static final int BASE_DEBUG_PORT = 5005;
 
     /**
      * Constructs a new container instance and exposed the debug port as {@code 5005 + selfId}.
@@ -27,39 +28,32 @@ public class ContainerImage extends GenericContainer<ContainerImage> {
      * @param dockerImage the Docker image to run
      * @param network the Docker network to attach the container to
      * @param selfId the selfId for the node
-     * @param outputDirectory the local directory to bind to the container's saved state directory
-     * @param savedStateDirectory the name of the directory in the container where saved state will be stored
+     * Note: Previously this class bind-mounted a local saved-state directory into the container. We now copy
+     * files out of the container on demand instead of mounting a directory.
      */
     public ContainerImage(
             @NonNull final ImageFromDockerfile dockerImage,
             @NonNull final Network network,
-            @NonNull final NodeId selfId,
-            @NonNull final Path outputDirectory,
-            @NonNull final String savedStateDirectory) {
+            @NonNull final NodeId selfId) {
         super(dockerImage);
 
         final String alias = String.format(NODE_IDENTIFIER_FORMAT, selfId.id());
-        final int debugPort = BASE_DEBUG_PORT + (int) selfId.id();
+        final int containerControlDebugPort = getContainerControlDebugPort(selfId);
+        final int nodeCommunicationDebugPort = getNodeCommunicationDebugPort(selfId);
 
-        // Apply the common configuration expected by tests
-        withNetwork(network).withNetworkAliases(alias).withExposedPorts(CONTROL_PORT);
+        // Apply the common configuration expected by tests.
+        // By default, the container wait for all ports listed, but we only want it to wait for the
+        // container control port, because the node communication service is established later
+        // by the test code with the init request.
+        withNetwork(network)
+                .withNetworkAliases(alias)
+                .withExposedPorts(CONTAINER_CONTROL_PORT, NODE_COMMUNICATION_PORT)
+                .waitingFor(Wait.forListeningPorts(CONTAINER_CONTROL_PORT, containerControlDebugPort));
 
-        // Create a local directory for saved state directory contents and
-        // bind it to the saved state directory for the node in the container
-        final Path localSavedStateDirectory = outputDirectory.resolve(savedStateDirectory);
-        try {
-            Files.createDirectories(localSavedStateDirectory);
-        } catch (final IOException e) {
-            throw new UncheckedIOException("Unable to create directory " + localSavedStateDirectory, e);
-        }
-        withFileSystemBind(localSavedStateDirectory.toAbsolutePath().toString(), "/" + savedStateDirectory);
-        withEnv("JAVA_TOOL_OPTIONS", getJavaToolOptions(debugPort));
-        addFixedExposedPort(debugPort, debugPort);
-    }
+        withEnv("JAVA_TOOL_OPTIONS", getJavaToolOptions(containerControlDebugPort));
+        addFixedExposedPort(containerControlDebugPort, containerControlDebugPort);
+        addFixedExposedPort(nodeCommunicationDebugPort, nodeCommunicationDebugPort);
 
-    private static String getJavaToolOptions(final int debugPort) {
-        return String.format(
-                "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:%s -Djdk.attach.allowAttachSelf=true -XX:+StartAttachListener",
-                debugPort);
+        withWorkingDirectory(CONTAINER_APP_WORKING_DIR);
     }
 }
